# crypto-orderbook

./: .gitignore  Cargo.toml  README.md
benches/: deserialization.rs  linkedlist_cache.rs
examples/: binance_ws.rs  binance_ws_simd.rs
src/: lib.rs  ws.rs
src/binance/: api.rs  book.rs  mod.rs  types.rs  ws.rs
src/l2_book/: fsm.rs  mod.rs  tokio.rs  types.rs
src/orderbook/: book.rs  linkedlist.rs  mod.rs  queue.rs  types.rs
src/orderbook_l2/: book.rs  mod.rs  types.rs
