[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
slab = "0.4.11"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.48.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = [ "client"] }
webpki-roots = "1.0.4"
url = "2.5.7"
hyper-util = { version = "0.1.19", features = ["tokio"] }
http-body-util = "0.1.3"
http = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
